--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["@dcloudio/types", "@uni-helper/uni-app-types", "nutui-uniapp/global.d.ts"],
+    "types": ["@dcloudio/types", "@uni-helper/uni-app-types"],
     "sourceMap": true
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
