--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3090720231104001",
     "@uni-helper/uni-use": "^0.17.1",
     "@vueuse/core": "^9.13.0",
+    "alova": "^2.14.0",
     "nutui-uniapp": "^1.5.1",
     "vue": "^3.3.8",
     "vue-i18n": "^9.6.5"
