--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "types": ["@dcloudio/types", "@uni-helper/uni-app-types"],
     "sourceMap": true
   },
+  "references": [{ "path": "./tsconfig.node.json" }],
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "vueCompilerOptions": {
     "experimentalRuntimeMode": "runtime-uni-app",
