--- a/package.json
+++ b/package.json
@@ -61,12 +61,14 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3090720231104001",
     "@dcloudio/uni-mp-xhs": "3.0.0-alpha-3090720231104001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3090720231104001",
+    "@uni-helper/uni-network": "^0.17.0",
     "@uni-helper/uni-use": "^0.17.1",
     "@vueuse/core": "^9.13.0",
     "alova": "^2.14.0",
+    "axios": "^1.6.2",
     "echarts": "^5.4.3",
     "nutui-uniapp": "^1.5.1",
-    "pinia": "^2.1.7",
+    "pinia": "^2.0.36",
     "pinia-auto-refs": "^0.0.10",
     "vue": "^3.3.8",
     "vue-i18n": "^9.6.5"
