chore: stash files

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -42,7 +42,7 @@
   },
   "quickapp": {},
   "mp-weixin": {
-    "appid": "",
+    "appid": "wx4c8c20928e933620",
     "setting": {
       "urlCheck": false
     },
